chore: security and auth